# houdini_package_runner

./: .coveragerc  .flake8  .gitignore  .isort.cfg  LICENSE  MANIFEST.in  README.md  mypy.ini  pylint.rc  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: python-publish.yml  tests.yml
python/houdini_package_runner/: parser.py  utils.py
python/houdini_package_runner/discoverers/: package.py
python/houdini_package_runner/items/: base.py  dialog_script.py  digital_asset.py  filesystem.py  xml.py
python/houdini_package_runner/runners/: base.py
python/houdini_package_runner/runners/black/: runner.py
python/houdini_package_runner/runners/flake8/: runner.py
python/houdini_package_runner/runners/isort/: runner.py
python/houdini_package_runner/runners/modernize/: runner.py
python/houdini_package_runner/runners/pylint/: runner.py
src/houdini_package_runner/: __init__.py  config.py  parser.py  runners.toml  utils.py
src/houdini_package_runner/discoverers/: base.py  package.py
src/houdini_package_runner/items/: base.py  dialog_script.py  digital_asset.py  filesystem.py  xml.py
src/houdini_package_runner/runners/: base.py  utils.py
src/houdini_package_runner/runners/black/: runner.py
src/houdini_package_runner/runners/flake8/: runner.py
src/houdini_package_runner/runners/isort/: isort.cfg  runner.py
src/houdini_package_runner/runners/modernize/: runner.py
src/houdini_package_runner/runners/pylint/: runner.py
tests/: conftest.py  test_config.py  test_parser.py  test_utils.py
tests/data/: get_file_config_data.toml  get_item_config_data.toml
tests/data/test_load_runner_config/: config1.toml  config2.toml  expected.toml
tests/discoverers/: test_base.py  test_package.py
tests/items/: test_dialog_script.py  test_digital_asset.py  test_xml.py
tests/items/data/: test__get_script_callback.ds  test_menu__get_items_to_process.xml  test_pypanel__get_items_to_process.xml
tests/items/data/test__get_python_menu_script/: spaces.ds  tabs.ds
tests/items/data/test__handle_changed_contents/: original.ds
tests/items/data/test_is_python_file/: decode_error.hip  hython_script  ls_script
tests/python/: test_parser.py  test_utils.py
tests/python/discoverers/: test_base.py  test_package.py
tests/python/items/: test_base.py  test_dialog_script.py  test_digital_asset.py  test_filesystem.py  test_xml.py
tests/python/items/data/: test__gather_items.ds  test__get_default_python_expressions.ds  test_shelf__get_items_to_process.shelf
tests/python/items/data/test__handle_changed_contents/: expected.ds
tests/python/runners/: test_base.py
tests/python/runners/black/: test_runner.py
tests/python/runners/flake8/: test_runner.py
tests/python/runners/isort/: test_runner.py
tests/python/runners/modernize/: test_runner.py
tests/python/runners/pylint/: test_runner.py
tests/runners/: test_base.py  test_utils.py
tests/runners/black/: test_runner.py
tests/runners/flake8/: test_runner.py
tests/runners/isort/: test_runner.py
tests/runners/modernize/: test_runner.py
tests/runners/pylint/: test_runner.py
